--- a/opensc-midicontrollers-model/opensc-midicontrollers-model.csproj
+++ b/opensc-midicontrollers-model/opensc-midicontrollers-model.csproj
@@ -1,14 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <OutputType>Library</OutputType>
-    <RootNamespace>OpenSC</RootNamespace>
+      <TargetFramework>net5.0</TargetFramework>
+      <OutputType>Library</OutputType>
+      <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Sanford.Multimedia.Midi" Version="6.6.2" />
+      <PackageReference Include="Sanford.Multimedia.Midi" Version="6.6.2"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj" />
+  <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
