--- a/GlobalCsproj/CopyToOutput.csproj
+++ b/GlobalCsproj/CopyToOutput.csproj
@@ -1,6 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy /c /y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\_MODULE\&quot;" />
-    <Exec Command="xcopy /c /y &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;$(SolutionDir)\_MODULE\&quot;" />
+      <Exec Command="xcopy /c /y &#34;$(TargetDir)\*&#34; &#34;$(SolutionDir)\_OUTPUT\&#34;"/>
   </Target>
 </Project>
