--- a/opensc-labelsets-gui/opensc-labelsets-gui.csproj
+++ b/opensc-labelsets-gui/opensc-labelsets-gui.csproj
@@ -1,27 +1,36 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
-    <OutputType>Library</OutputType>
-    <RootNamespace>OpenSC</RootNamespace>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <UseWindowsForms>true</UseWindowsForms>
-    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+      <TargetFramework>net5.0-windows</TargetFramework>
+      <OutputType>Library</OutputType>
+      <RootNamespace>OpenSC</RootNamespace>
+      <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+      <UseWindowsForms>true</UseWindowsForms>
+      <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+      <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj" />
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
-    <ProjectReference Include="..\opensc-labelsets-model\opensc-labelsets-model.csproj" />
-    <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj" />
-    <ProjectReference Include="..\opensc-signals-model\opensc-signals-model.csproj" />
+      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-labelsets-model\opensc-labelsets-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-signals-model\opensc-signals-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+      <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="GUI\Labelsets\AllLabelsetEditorForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+      <Compile Update="GUI\Labelsets\AllLabelsetEditorForm.cs" />
   </ItemGroup>
   <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
