--- a/opensc-midicontrollers-bridge-macros/opensc-midicontrollers-bridge-macros.csproj
+++ b/opensc-midicontrollers-bridge-macros/opensc-midicontrollers-bridge-macros.csproj
@@ -1,12 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>OpenSC</RootNamespace>
+      <TargetFramework>net5.0</TargetFramework>
+      <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
-    <ProjectReference Include="..\opensc-midicontrollers-model\opensc-midicontrollers-model.csproj" />
-    <ProjectReference Include="..\opensc-macros-model\opensc-macros-model.csproj" />
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-midicontrollers-model\opensc-midicontrollers-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-macros-model\opensc-macros-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj" />
+  <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
