--- a/opensc-midicontrollers-gui/opensc-midicontrollers-gui.csproj
+++ b/opensc-midicontrollers-gui/opensc-midicontrollers-gui.csproj
@@ -1,26 +1,33 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
-    <RootNamespace>OpenSC</RootNamespace>
-    <UseWindowsForms>true</UseWindowsForms>
-    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+      <TargetFramework>net5.0-windows</TargetFramework>
+      <RootNamespace>OpenSC</RootNamespace>
+      <UseWindowsForms>true</UseWindowsForms>
+      <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+      <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj" />
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
-    <ProjectReference Include="..\opensc-midicontrollers-model\opensc-midicontrollers-model.csproj" />
+      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-midicontrollers-model\opensc-midicontrollers-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+      <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
+      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="GUI\Midi\MidiControllerEditorForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Update="GUI\Midi\MidiControllerList.cs">
-      <SubType>Form</SubType>
-    </Compile>
+      <Compile Update="GUI\Midi\MidiControllerEditorForm.cs">
+         <SubType>Form</SubType>
+      </Compile>
+      <Compile Update="GUI\Midi\MidiControllerList.cs">
+         <SubType>Form</SubType>
+      </Compile>
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj" />
+  <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
