--- a/opensc-routers-labelsets-bridge-dynamictexts/opensc-routers-labelsets-bridge-dynamictexts.csproj
+++ b/opensc-routers-labelsets-bridge-dynamictexts/opensc-routers-labelsets-bridge-dynamictexts.csproj
@@ -1,13 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>opensc_routers_labelsets_bridge_dynamictexts</RootNamespace>
+      <TargetFramework>net5.0</TargetFramework>
+      <RootNamespace>opensc_routers_labelsets_bridge_dynamictexts</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
-    <ProjectReference Include="..\opensc-dynamictexts-model\opensc-dynamictexts-model.csproj" />
-    <ProjectReference Include="..\opensc-labelsets-model\opensc-labelsets-model.csproj" />
-    <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj" />
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-dynamictexts-model\opensc-dynamictexts-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-labelsets-model\opensc-labelsets-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj" />
+  <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
