--- a/opensc-salvos-model/opensc-salvos-model.csproj
+++ b/opensc-salvos-model/opensc-salvos-model.csproj
@@ -1,11 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>OpenSC</RootNamespace>
+      <TargetFramework>net5.0</TargetFramework>
+      <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
-    <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj" />
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj" />
+  <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
