--- a/opensc-signals-bridge-labelsets/opensc-signals-bridge-labelsets.csproj
+++ b/opensc-signals-bridge-labelsets/opensc-signals-bridge-labelsets.csproj
@@ -1,12 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>opensc_signals_bridge_labelsets</RootNamespace>
+      <TargetFramework>net5.0</TargetFramework>
+      <RootNamespace>opensc_signals_bridge_labelsets</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
-    <ProjectReference Include="..\opensc-labelsets-model\opensc-labelsets-model.csproj" />
-    <ProjectReference Include="..\opensc-signals-model\opensc-signals-model.csproj" />
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-labelsets-model\opensc-labelsets-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
+      <ProjectReference Include="..\opensc-signals-model\opensc-signals-model.csproj">
+         <Private>false</Private>
+      </ProjectReference>
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj" />
+  <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
